--- a/config.ini
+++ b/config.ini
@@ -14,6 +14,7 @@ webhook_message = @everyone New Hit!
 [Captures]
 hypixel_stats = True
 optifine_cape = True
-email_access = True
+name_change_info = True
 ban_check = True
+
 
